microservices/frontend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-cart
  labels:
    name: shopping-cart
    app: carthub
